--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
+#AI Scientific Calculator 
 AI Scientific Calculator is a web-based tool that leverages AI to interpret natural language math queries via text
 or voice, performing advanced computations like calculus, algebra, matrices, and statistics using OpenAI's GPT-4o-mini.
 
